--- a/babybuddy/templates/babybuddy/welcome.html
+++ b/babybuddy/templates/babybuddy/welcome.html
@@ -60,7 +60,7 @@
         </p>
         <p class="text-center">
             {% if perms.core.add_child %}
-                <a href="{% url 'child-add' %}" class="btn btn-lg btn-success">
+                <a href="{% url 'core:child-add' %}" class="btn btn-lg btn-success">
                     <i class="icon icon-child" aria-hidden="true"></i> Add a Child
                 </a>
             {% endif %}
