--- a/core/templates/core/child_confirm_delete.html
+++ b/core/templates/core/child_confirm_delete.html
@@ -4,8 +4,8 @@
 {% block title %}Delete a Child{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'child-list' %}">Children</a></li>
-    <li class="breadcrumb-item font-weight-bold"><a href="{% url 'child' object.slug %}">{{ object }}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">Children</a></li>
+    <li class="breadcrumb-item font-weight-bold"><a href="{% url 'core:child' object.slug %}">{{ object }}</a></li>
     <li class="breadcrumb-item active" aria-current="page">Delete</li>
 {% endblock %}
 
@@ -25,6 +25,6 @@
             {% endif %}
         </div>
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a href="{% url 'child-list' %}" class="btn btn-default">Cancel</a>
+        <a href="{% url 'core:child-list' %}" class="btn btn-default">Cancel</a>
     </form>
 {% endblock %}
