--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -26,7 +26,7 @@
             <tbody>
                 {% for change in object_list %}
                     <tr>
-                        <th scope="row"><a href="{% url 'child' change.child.slug %}">{{ change.child }}</a></th>
+                        <th scope="row"><a href="{% url 'core:child' change.child.slug %}">{{ change.child }}</a></th>
                         <td class="text-center">{{ change.wet|bool_icon }}</td>
                         <td class="text-center">{{ change.solid|bool_icon }}</td>
                         <td>{{ change.color }}</td>
@@ -35,13 +35,13 @@
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
                                 {% if perms.core.change_diaperchange %}
-                                    <a href="{% url 'diaperchange-update' change.id %}" class="btn btn-primary">
+                                    <a href="{% url 'core:diaperchange-update' change.id %}" class="btn btn-primary">
                                         <i class="icon icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_diaperchange %}
-                                    <a href="{% url 'diaperchange-delete' change.id %}" class="btn btn-danger">
+                                    <a href="{% url 'core:diaperchange-delete' change.id %}" class="btn btn-danger">
                                         <i class="icon icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
@@ -60,7 +60,7 @@
     {% include 'babybuddy/paginator.html' %}
 
     {% if perms.core.add_diaperchange %}
-        <a href="{% url 'diaperchange-add' %}" class="btn btn-sm btn-success">
+        <a href="{% url 'core:diaperchange-add' %}" class="btn btn-sm btn-success">
             <i class="icon icon-diaperchange" aria-hidden="true"></i> Add a Change
         </a>
     {% endif %}
