--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -27,7 +27,7 @@
             <tbody>
                 {% for feeding in object_list %}
                     <tr>
-                        <th scope="row"><a href="{% url 'child' feeding.child.slug %}">{{ feeding.child }}</a></th>
+                        <th scope="row"><a href="{% url 'core:child' feeding.child.slug %}">{{ feeding.child }}</a></th>
                         <td>{{ feeding.method }}</td>
                         <td>{{ feeding.type }}</td>
                         <td>
@@ -41,13 +41,13 @@
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
                                 {% if perms.core.change_feeding %}
-                                    <a href="{% url 'feeding-update' feeding.id %}" class="btn btn-primary">
+                                    <a href="{% url 'core:feeding-update' feeding.id %}" class="btn btn-primary">
                                         <i class="icon icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_feeding %}
-                                    <a href="{% url 'feeding-delete' feeding.id %}" class="btn btn-danger">
+                                    <a href="{% url 'core:feeding-delete' feeding.id %}" class="btn btn-danger">
                                         <i class="icon icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
@@ -66,7 +66,7 @@
     {% include 'babybuddy/paginator.html' %}
 
     {% if perms.core.add_feeding %}
-        <a href="{% url 'feeding-add' %}" class="btn btn-sm btn-success">
+        <a href="{% url 'core:feeding-add' %}" class="btn btn-sm btn-success">
             <i class="icon icon-feeding" aria-hidden="true"></i> Add a Feeding
         </a>
     {% endif %}
