--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'child-list' %}">Children</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:child-list' %}">Children</a></li>
     {% if object %}
-        <li class="breadcrumb-item font-weight-bold"><a href="{% url 'child' object.slug %}">{{ object }}</a></li>
+        <li class="breadcrumb-item font-weight-bold"><a href="{% url 'core:child' object.slug %}">{{ object }}</a></li>
         <li class="breadcrumb-item active" aria-current="page">Update</li>
     {% else %}
         <li class="breadcrumb-item active" aria-current="page">Add a Child</li>
