--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'diaperchange-list' %}">Diaper Changes</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:diaperchange-list' %}">Diaper Changes</a></li>
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">Update</li>
     {% else %}
