--- a/core/templates/core/feeding_form.html
+++ b/core/templates/core/feeding_form.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'feeding-list' %}">Feedings</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:feeding-list' %}">Feedings</a></li>
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">Update</li>
     {% else %}
