--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -4,9 +4,9 @@
 {% block title %}Timer{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'timer-list' %}">Timers</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:timer-list' %}">Timers</a></li>
     {% if object %}
-        <li class="breadcrumb-item font-weight-bold"><a href="{% url 'timer-detail' object.id %}">{{ object }}</a></li>
+        <li class="breadcrumb-item font-weight-bold"><a href="{% url 'core:timer-detail' object.id %}">{{ object }}</a></li>
         <li class="breadcrumb-item active" aria-current="page">Update</li>
     {% else %}
         <li class="breadcrumb-item active" aria-current="page">Start</li>
