--- a/core/templates/core/tummytime_form.html
+++ b/core/templates/core/tummytime_form.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'tummytime-list' %}">Tummy Time</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:tummytime-list' %}">Tummy Time</a></li>
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">Update</li>
     {% else %}
