--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -26,7 +26,7 @@
             <tbody>
                 {% for tummytime in object_list %}
                     <tr>
-                        <th scope="row"><a href="{% url 'child' tummytime.child.slug %}">{{ tummytime.child }}</a></th>
+                        <th scope="row"><a href="{% url 'core:child' tummytime.child.slug %}">{{ tummytime.child }}</a></th>
                         <td>{{ tummytime.duration|duration_string }}</td>
                         <td>{{ tummytime.start|date:'n/j/y G:i' }}</td>
                         <td>{{ tummytime.end|date:'n/j/y G:i' }}</td>
@@ -35,13 +35,13 @@
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
                                 {% if perms.core.change_tummytime %}
-                                    <a href="{% url 'tummytime-update' tummytime.id %}" class="btn btn-primary">
+                                    <a href="{% url 'core:tummytime-update' tummytime.id %}" class="btn btn-primary">
                                         <i class="icon icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_tummytime %}
-                                    <a href="{% url 'tummytime-delete' tummytime.id %}" class="btn btn-danger">
+                                    <a href="{% url 'core:tummytime-delete' tummytime.id %}" class="btn btn-danger">
                                         <i class="icon icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
@@ -60,7 +60,7 @@
     {% include 'babybuddy/paginator.html' %}
 
     {% if perms.core.add_tummytime %}
-        <a href="{% url 'tummytime-add' %}" class="btn btn-sm btn-success">
+        <a href="{% url 'core:tummytime-add' %}" class="btn btn-sm btn-success">
             <i class="icon icon-tummytime" aria-hidden="true"></i> Add a Tummy Time Entry</a>
     {% endif %}
 
