--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -1,16 +1,21 @@
 // Baby Buddy site-wide custom styles.
 
-// Temporary workaround. See: https://github.com/twbs/bootstrap/issues/23553
-.dropdown-menu-right {
-    right: 0;
-    left: auto; // Reset the default from `.dropdown-menu`
-}
-
 // Temporary workaround. See: https://github.com/tempusdominus/bootstrap-4/issues/18
 .bootstrap-datetimepicker-widget {
     &.dropdown-menu {
         width: auto; // Reset the default
     }
+}
+
+// Extra-small button.
+.btn-xs {
+    @include button-size(.2rem, .12rem, .75rem, 1, .2rem);
+}
+
+// Temporary workaround. See: https://github.com/twbs/bootstrap/issues/23553
+.dropdown-menu-right {
+    right: 0;
+    left: auto; // Reset the default from `.dropdown-menu`
 }
 
 // BB form fields do not follow typical BS4 style that enables this display.
