Consolidate messages and errors in to main page template.

--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -7,6 +7,11 @@
     }
 }
 
+// Remove extra margin below site breadcrumb.
+.breadcrumb {
+    margin-bottom: 0;
+}
+
 // Extra-small button.
 .btn-xs {
     @include button-size(.2rem, .12rem, .75rem, 1, .2rem);
