--- a/babybuddy/templates/babybuddy/page.html
+++ b/babybuddy/templates/babybuddy/page.html
@@ -5,6 +5,7 @@
     <div id="view-{{ request.resolver_match.view_name }}" class="container-fluid">
         <div class="row justify-content-md-center">
             <div class="col-lg-12 mb-4">
+                {% include 'babybuddy/messages.html' %}
                 {% block content %}{% endblock %}
             </div>
         </div>
