Add "error" and "debug" theme colors to match Django message classes.

--- a/babybuddy/static_src/scss/themes/blueorange.scss
+++ b/babybuddy/static_src/scss/themes/blueorange.scss
@@ -20,8 +20,10 @@ $theme-colors: (
     secondary: $orange,
     success: $green,
     info: $cyan,
+    debug: $cyan,
     warning: $yellow,
     danger: $red,
+    error: $red,
     light: $gray-100,
     dark: $gray-800
 );
