--- a/babybuddy/templates/babybuddy/user_list.html
+++ b/babybuddy/templates/babybuddy/user_list.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load widget_tweaks static thumbnail %}
+{% load bootstrap widget_tweaks %}
 
 {% block title %}Users{% endblock %}
 
@@ -18,6 +18,8 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
+                    <th>Staff</th>
+                    <th>Active</th>
                     <th class="text-center">Actions</th>
                 </tr>
             </thead>
@@ -28,6 +30,8 @@
                         <td>{{ object.first_name }}</td>
                         <td>{{ object.last_name }}</td>
                         <td>{{ object.email }}</td>
+                        <td>{{ object.is_staff|bool_icon }}</td>
+                        <td>{{ object.is_active|bool_icon }}</td>
                         <td class="text-center">
                             <div class="btn-group btn-group-sm" role="group" aria-label="Actions">
 
